--- a/package.json
+++ b/package.json
@@ -10,19 +10,12 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.55",
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^11.0.1",
-    "bootstrap-icons": "^1.5.0",
     "framer-motion": "^4.1.17",
-    "glob": "^7.1.7",
-    "ionicons": "^5.5.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-intersection-observer": "^8.32.0",
-    "react-spring": "^9.2.4",
-    "swiper": "^6.7.5"
+    "react-intersection-observer": "^8.32.0"
   },
   "devDependencies": {
     "eslint": "7.30.0",
